compiler-core/src/parse/snapshots/gleam_core__parse__tests__unknown_target.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@target(abc)\npublic fn one() {}"
snapshot_kind: text
---
----- SOURCE CODE

@target(abc)
public fn one() {}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:9
  │
2 │ @target(abc)
  │         ^^^ I don't recognise this target

Try `erlang`, `javascript`.
